--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "es6-error",
   "version": "2.1.1",
   "description": "Easily-extendable error for use with ES6 classes",
-  "main": "dist/index.js",
+  "main": "./lib/index",
+  "jsnext:main": "./src/index",
   "scripts": {
-    "test": "mocha --compilers js:babel/register",
-    "prepublish": "npm test && make dist"
+    "test": "mocha --compilers js:babel-core/register --recursive",
+    "build": "babel ./src --out-dir ./lib",
+    "prepublish": "npm run build && npm run test"
   },
   "repository": {
     "type": "git",
@@ -23,9 +25,25 @@
   },
   "homepage": "https://github.com/bjyoungblood/es6-error",
   "devDependencies": {
-    "babel": "^5.1.11",
+    "babel-cli": "^6.8.0",
+    "babel-core": "^6.8.0",
+    "babel-plugin-add-module-exports": "^0.1.4",
+    "babel-plugin-transform-builtin-extend": "^1.1.0",
+    "babel-preset-es2015": "^6.6.0",
     "chai": "^3.2.0",
-    "mocha": "^2.3.2"
+    "mocha": "^2.4.5"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "add-module-exports",
+      ["babel-plugin-transform-builtin-extend", {
+        "globals": ["Error"],
+        "approximate": true
+      }]
+    ]
+  }
 }
