--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
     "build": "babel ./src --out-dir ./lib",
-    "prepublish": "npm run build && npm run test"
+    "before-publish": "npm run build && npm run test"
   },
   "repository": {
     "type": "git",
