--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.1",
   "description": "Easily-extendable error for use with ES6 classes",
   "main": "./lib/index",
-  "jsnext:main": "./src/index",
+  "jsnext:main": "./lib/index",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
     "build": "babel ./src --out-dir ./lib",
