--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "typings": "./lib/index.d.ts",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
-    "build": "babel ./src --out-dir ./lib",
+    "build": "node build.js",
     "prepublish": "npm run build && npm run test"
   },
   "repository": {
