--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "typings": "./lib/index.d.ts",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
-    "build": "node build.js",
+    "build": "npm run build:commonjs && npm run build:es",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src/index.js --out-file lib/index.js",
+    "build:es": "cross-env BABEL_ENV=es babel src/index.js --out-file lib/index.jsnext.js",
     "prepublish": "npm run build && npm run test"
   },
   "repository": {
@@ -32,6 +34,7 @@
     "babel-plugin-transform-builtin-extend": "^1.1.0",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.2.0",
+    "cross-env": "^2.0.1",
     "mocha": "^2.4.5"
   },
   "dependencies": {}
