--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "4.0.2",
   "description": "Easily-extendable error for use with ES6 classes",
   "main": "./lib/index",
-  "jsnext:main": "./lib/index.jsnext.js",
-  "typings": "./lib/index.d.ts",
+  "module": "./es6/index.js",
+  "typings": "./typings/index.d.ts",
+  "files": [
+    "lib",
+    "es6",
+    "typings"
+  ],
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive",
-    "build": "npm run build:commonjs && npm run build:es && npm run build:ts",
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src/index.js --out-file lib/index.js",
-    "build:es": "cross-env BABEL_ENV=es babel src/index.js --out-file lib/index.jsnext.js",
-    "build:ts": "cross-env BABEL_ENV=ts babel src/index.js --out-file lib/index.ts.js",
-    "prepublish": "npm run build && npm run test"
+    "test": "cross-env BABEL_ENV=test mocha --require babel-core/register --recursive",
+    "clean": "rimraf lib es6",
+    "build": "npm run clean && npm run build:cjs && npm run build:es6",
+    "build:cjs": "mkdir -p lib && cross-env BABEL_ENV=cjs babel src/index.js -o lib/index.js",
+    "build:es6": "mkdir -p es6 && cross-env BABEL_ENV=es6 babel src/index.js -o es6/index.js",
+    "prepublishOnly": "npm run build && npm run test"
   },
   "repository": {
     "type": "git",
@@ -29,14 +34,15 @@
   },
   "homepage": "https://github.com/bjyoungblood/es6-error",
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-plugin-add-module-exports": "^0.1.4",
-    "babel-plugin-transform-builtin-extend": "^1.1.0",
-    "babel-preset-es2015": "^6.6.0",
-    "chai": "^3.2.0",
-    "cross-env": "^2.0.1",
-    "mocha": "^2.4.5"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-builtin-extend": "^1.1.2",
+    "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.1",
+    "mocha": "^4.0.1",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {}
 }
