--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: node_js
 node_js:
     - "stable"
+    - "14"
+    - "13"
+    - "12"
+    - "11"
+    - "10"
+    - "9"
     - "8"
     - "7"
-    - "6"
-    - "5"
 
+arch:
+    - amd64
+    - ppc64le
